tests/ui/impl-trait/in-trait/unexpected-node-synthetic-issue-148630-2.stderr
error[E0277]: expected a `FnOnce<&'a i32>` closure, found `()`
  --> $DIR/unexpected-node-synthetic-issue-148630-2.rs:7:17
   |
LL |     fn foo() -> impl Sized
   |                 ^^^^^^^^^^ expected an `FnOnce<&'a i32>` closure, found `()`
   |
   = help: the trait `for<'a> FnOnce<&'a i32>` is not implemented for `()`

error[E0277]: expected a `FnOnce<&'a i32>` closure, found `()`
  --> $DIR/unexpected-node-synthetic-issue-148630-2.rs:7:17
   |
LL |     fn foo() -> impl Sized
   |                 ^^^^^^^^^^ expected an `FnOnce<&'a i32>` closure, found `()`
   |
   = help: the trait `for<'a> FnOnce<&'a i32>` is not implemented for `()`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0277]: expected a `FnOnce<&'a i32>` closure, found `()`
  --> $DIR/unexpected-node-synthetic-issue-148630-2.rs:7:5
   |
LL | /     fn foo() -> impl Sized
...  |
LL | |     where
LL | |         for<'a> <() as FnOnce<&'a i32>>::Output: Tr,
   | |____________________________________________________^ expected an `FnOnce<&'a i32>` closure, found `()`
   |
   = help: the trait `for<'a> FnOnce<&'a i32>` is not implemented for `()`

error[E0277]: expected a `FnOnce<&'a i32>` closure, found `()`
  --> $DIR/unexpected-node-synthetic-issue-148630-2.rs:7:17
   |
LL |     fn foo() -> impl Sized
   |                 ^^^^^^^^^^ expected an `FnOnce<&'a i32>` closure, found `()`
   |
   = help: the trait `for<'a> FnOnce<&'a i32>` is not implemented for `()`

error[E0277]: expected a `FnOnce<&'a i32>` closure, found `()`
  --> $DIR/unexpected-node-synthetic-issue-148630-2.rs:7:22
   |
LL |     fn foo() -> impl Sized
   |                      ^^^^^ expected an `FnOnce<&'a i32>` closure, found `()`
   |
   = help: the trait `for<'a> FnOnce<&'a i32>` is not implemented for `()`

error[E0277]: expected a `FnOnce<&'a i32>` closure, found `()`
  --> $DIR/unexpected-node-synthetic-issue-148630-2.rs:7:17
   |
LL |     fn foo() -> impl Sized
   |                 ^^^^^^^^^^ expected an `FnOnce<&'a i32>` closure, found `()`
   |
   = help: the trait `for<'a> FnOnce<&'a i32>` is not implemented for `()`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0277]: expected a `FnOnce<&'a i32>` closure, found `()`
  --> $DIR/unexpected-node-synthetic-issue-148630-2.rs:7:17
   |
LL |     fn foo() -> impl Sized
   |                 ^^^^^^^^^^ expected an `FnOnce<&'a i32>` closure, found `()`
   |
   = help: the trait `for<'a> FnOnce<&'a i32>` is not implemented for `()`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0277`.
